--- a/index.html
+++ b/index.html
@@ -10,3 +10,10 @@
   <script src="app.js"></script>
 </body>
 </html>
+<input id="margin" type="number" placeholder="Margin %">
+<select id="currency">
+  <option value="USD">USD</option>
+  <option value="LKR">LKR</option>
+  <option value="EUR">EUR</option>
+  <option value="GBP">GBP</option>
+</select>
