--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Recipe Builder</title>
-  <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
+
+  <!-- ✅ Tom Select CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet" />
+
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     select, input { margin: 5px; padding: 5px; }
@@ -35,14 +38,14 @@
   <h3>Result</h3>
   <pre id="total-output"></pre>
 
-  <!-- Tom Select JS -->
+  <!-- ✅ Tom Select JS -->
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbw-JT6d9sVkxXSB9-oBDTGauDjg_UV5f9AG3ZofAH9sq5UWh4ohXOZd9y0LbcOn0Y3CHw/exec";
     let ingredientsData = [];
 
-    // On load, fetch ingredient list then add first row
+    // 1. Fetch ingredients on page load
     fetch(`${API_URL}?list=ingredients`)
       .then(res => {
         if (!res.ok) throw new Error(`Fetch failed: ${res.status}`);
@@ -50,16 +53,19 @@
       })
       .then(data => {
         ingredientsData = data;
-        addIngredient();
+        addIngredient(); // add initial row
       })
       .catch(err => console.error("Error loading ingredients:", err));
 
+    // 2. Add a new ingredient row
     function addIngredient() {
       const container = document.getElementById("ingredient-list");
       const row = document.createElement("div");
 
+      // Ingredient dropdown
       const select = document.createElement("select");
       select.className = "ingredient-dropdown";
+
       ingredientsData.forEach(({ name, unit }) => {
         const opt = document.createElement("option");
         opt.value = name;
@@ -67,6 +73,7 @@
         select.appendChild(opt);
       });
 
+      // Quantity input
       const qtyInput = document.createElement("input");
       qtyInput.type = "number";
       qtyInput.placeholder = "Qty";
@@ -75,29 +82,28 @@
       row.append(select, qtyInput);
       container.appendChild(row);
 
+      // Initialize Tom Select
       new TomSelect(select, {
         create: false,
-        sortField: {
-          field: "text",
-          direction: "asc"
-        },
+        sortField: { field: "text", direction: "asc" },
         placeholder: "Type to search..."
       });
     }
 
+    // 3. Calculate total cost
     function calculateTotal() {
       const yieldVal = Number(document.getElementById("yield").value) || 1;
-      const wastage  = (Number(document.getElementById("wastage").value) || 0) / 100;
-      let totalCost  = 0;
+      const wastage = (Number(document.getElementById("wastage").value) || 0) / 100;
+      let totalCost = 0;
 
       document.querySelectorAll("#ingredient-list > div").forEach(row => {
         const name = row.querySelector("select").value;
-        const qty  = Number(row.querySelector("input").value) || 0;
+        const qty = Number(row.querySelector("input").value) || 0;
         const ingredient = ingredientsData.find(i => i.name === name);
         if (ingredient) totalCost += qty * ingredient.costPerUnit;
       });
 
-      const adjusted   = totalCost / (1 - wastage);
+      const adjusted = totalCost / (1 - wastage);
       const perPortion = adjusted / yieldVal;
 
       document.getElementById("total-output").textContent =
