--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <title>Recipe Builder</title>
 
   <!-- Tom Select CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet" />
+  
 
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
@@ -43,6 +41,7 @@
 
   <!-- Tom Select JS -->
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
+
   <!-- Your application logic -->
   <script src="app.js"></script>
 </body>
