--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="ingredient-list"></div>
 
   <!-- Buttons for adding ingredients and calculating -->
-  <button onclick="addIngredient()">+ Add Ingredient</button>
+<button onclick="addIngredient()">Add Ingredient</button>
   <button onclick="calculateTotal()">Calculate Cost</button>
 
   <h3>Recipe Settings</h3>
