--- a/index.html
+++ b/index.html
@@ -41,3 +41,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
   <script>
+  </script>
+</body>
+</html>
